Grant edit and show views, begin frontend styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,6 @@
  *= require_self
  */
 @import "foundation_and_overrides";
+@import "foundation-datepicker";
 @import "trix";
 @import "font-awesome";
