--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -43,12 +43,12 @@
       .cell.small-12.medium-3
         = f.label :submission_open_date, 'Open Date', class: 'middle'
       .cell.small-12.medium-9
-        = f.text_field :submission_open_date, value: date_mmddYYYY(@grant.submission_open_date), placeholder: 'mm/dd/YYYY', required: true, data: { provide: 'fdatepicker', 'date-format': 'mm/dd/YYYY' }, class: 'small-12 medium-6'
+        = f.text_field :submission_open_date, value: date_mmddYYYY(@grant.submission_open_date), placeholder: 'mm/dd/YYYY', required: true, class: 'small-12 medium-6'
     .grid-x
       .cell.small-12.medium-3
         = f.label :submission_close_date, 'Close Date', class: 'middle'
       .cell.small-12.medium-9
-        = f.text_field :submission_close_date, value: date_mmddYYYY(@grant.submission_close_date), placeholder: 'mm/dd/YYYY', required: true, data: { provide: 'fdatepicker', 'date-format': 'mm/dd/YYYY' }, class: 'small-12 medium-6'
+        = f.text_field :submission_close_date, value: date_mmddYYYY(@grant.submission_close_date), placeholder: 'mm/dd/YYYY', required: true, class: 'small-12 medium-6'
 
     %h3
       Budget
