--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -17,11 +17,11 @@
     - @questions.each do |question|
       %tr
         %td= question.field
-        %td= question.grant
+        %td= question.grant.name
         %td= question.name
         %td= question.help_text
         %td= question.placeholder_text
-        %td= question.required
+        %td= (fa_icon('fa-check-square', text: "Yes")) if question.required?
         %td= link_to 'Show', question
         %td= link_to 'Edit', edit_question_path(question)
         %td= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' }
