--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,7 @@
   %body
     %div.grid-container
       %div.grid-x.grid-margin-x.grid-margin-y
+        = render 'layouts/header'
+      %div.grid-x.grid-margin-x.grid-margin-y
+        = render 'layouts/flash'
         = yield
