--- a/app/views/grants/edit.html.haml
+++ b/app/views/grants/edit.html.haml
@@ -1,10 +1,12 @@
-- content_for(:page_title, "#{@grant.name}")
+-# content_for(:page_title, "#{@grant.name}")
 
 .cell
-  %h1= "Editing #{@grant.name}"
+  %h1=# "Editing #{@grant.name}"
 
-.cell
-  = render 'form'
+.grid-x
+  .cell
+  = form_with model: @grant, local: true do |f|
+    = render 'form', f: f, grant: @grant, questions: @questions
 
 .cell
   = link_to 'Show', @grant
