--- a/app/views/questions/edit.html.haml
+++ b/app/views/questions/edit.html.haml
@@ -1,11 +1,20 @@
 - content_for(:page_title, "Editing '#{@question.name}'")
 
-.cell
-  %h1 Editing question
+.grid-x
+  .cell
+    %h1 Editing question
 
-= render 'form'
+    %p
+      This is an
+      = @question.field.type
 
-.cell
-  = link_to 'Show', @question
-  \|
-  = link_to 'View all', questions_path
+.grid-x
+  .cell
+    = form_with model: [@grant, @question], local: true do |f|
+      = render 'form', f: f, question: @question
+
+.grid-x
+  .cell
+    = link_to 'Back to Grant', grant_path(@grant)
+    \|
+    = link_to 'Edit Grant', edit_grant_path(@grant)
