Remove Fields, add DefaultSets, update seed

--- a/app/views/questions/edit.html.haml
+++ b/app/views/questions/edit.html.haml
@@ -5,8 +5,8 @@
     %h1 Editing question
 
     %p
-      This is an
-      = @question.field.type
+      Answer type:
+      = @question.answer_type
 
 .grid-x
   .cell
