--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -4,13 +4,6 @@
     %ul
       - question.errors.full_messages.each do |message|
         %li= message
-
-.grid-x
-  =# f.label :field
-  =# f.text_field :field
-.grid-x
-  =# f.label :grant
-  =# f.text_field :grant
 .grid-x
   .cell.small-12
     = f.label :name
@@ -33,6 +26,14 @@
     = f.label :required, class: 'middle'
   %p.help-text#requiredHelp
     Check to require a response to this question.
+%h3
+  Settings
+  = f.fields_for :constraint_questions, constraint_questions do |ff|
+    .grid-x
+      .small-12
+        = ff.label :value, ff.object.constraint.name, id: "question-#{ff.object.id}-name"
+        = ff.text_field :value, value: ff.object.value, id: "question-#{ff.object.id}-value"
+
 .grid-x
   .actions
     = f.submit 'Save', class: 'button'
