--- a/app/views/questions/edit.html.haml
+++ b/app/views/questions/edit.html.haml
@@ -1,20 +1,12 @@
-- content_for(:page_title, "Editing '#{@question.name}'")
+- content_for(:page_title, "Editing: #{@question.name}")
 
 .grid-x
-  .cell
-    %h1 Editing question
+  %h1 Editing Question
 
-    %p
-      Answer type:
-      = @question.answer_type
+  = form_with model: [@grant, @question], local: true do |f|
+    = render 'form', f: f, question: @question, constraint_questions: @constraint_questions
 
 .grid-x
-  .cell
-    = form_with model: [@grant, @question], local: true do |f|
-      = render 'form', f: f, question: @question
-
-.grid-x
-  .cell
-    = link_to 'Back to Grant', grant_path(@grant)
-    \|
-    = link_to 'Edit Grant', edit_grant_path(@grant)
+  = link_to 'Back to Grant', grant_path(@grant)
+  \|
+  = link_to 'Edit Grant', edit_grant_path(@grant)
