--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -31,8 +31,8 @@
   = f.fields_for :constraint_questions, constraint_questions do |ff|
     .grid-x
       .small-12
-        = ff.label :value, ff.object.constraint.name, id: "question-#{ff.object.id}-name"
-        = ff.text_field :value, value: ff.object.value, id: "question-#{ff.object.id}-value"
+        = ff.label :value, ff.object.constraint.name.titleize, id: "constraint-question-#{ff.object.id}-name"
+        = ff.text_field :value, value: ff.object.value, id: "constraint-question-#{ff.object.id}-value"
 
 .grid-x
   .actions
