--- a/app/views/grants/edit.html.haml
+++ b/app/views/grants/edit.html.haml
@@ -1,14 +1,15 @@
--# content_for(:page_title, "#{@grant.name}")
+- content_for(:page_title, "#{@grant.name}")
 
-.cell
-  %h1=# "Editing #{@grant.name}"
+.grid-x
+  .cell
+    %h1= "Editing #{@grant.name}"
 
 .grid-x
   .cell
   = form_with model: @grant, local: true do |f|
     = render 'form', f: f, grant: @grant, questions: @questions
 
-.cell
-  = link_to 'Show', @grant
-  \|
-  = link_to 'Back', grants_path
+  .cell
+    = link_to 'Show', @grant, id: "grant-#{@grant.id}"
+    |
+    = link_to 'Back', grants_path
