--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,7 +1,3 @@
-.row
-  - if notice
-    #notice 
-      = notice
-  - if alert
-    #alert
-      = alert
+- flash.delete(:timedout).each do |message_type, message|
+  = render :layout => 'shared/flash_messages', :locals => { :type => message_type, :dismiss => true, :flash_content => message } do
+    = message
