--- a/app/views/grant_users/_new_form.html.haml
+++ b/app/views/grant_users/_new_form.html.haml
@@ -6,11 +6,10 @@
       = @grant.name
     .grid-x
       = f.label :email, 'Grant User\'s Email'
-      = f.select :email, @emails
+      = f.collection_select :user, @users, :id, :email, prompt: true
     .grid-x
       = f.label :grant_role, 'Grant Role'
-      = f.select :grant_role, GrantUser.grant_roles.keys.to_a
-
+      = f.select :grant_role, grant_user_grant_role_select_options, include_blank: 'Please select'
 .grid-x
   .actions
     = f.submit 'Save', class: 'button'
