--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -55,5 +55,5 @@
   = @grant.panel_location
 .cell
   = link_to 'Edit', edit_grant_path(@grant) if policy(@grant).edit?
-  = '\|' if policy(@grant).edit?
+  = '|' if policy(@grant).edit?
   = link_to 'Back', grants_path if policy(@grant).destroy?
