--- a/app/views/grants/index.html.haml
+++ b/app/views/grants/index.html.haml
@@ -17,5 +17,5 @@
 
 %br
 
--if policy(Grant).new?
-  = link_to 'New Grant', new_grant_path
+-# if policy(Grant).new?
+  =# link_to 'New Grant', new_grant_path
