--- a/app/views/shared/_flash_messages.html.haml
+++ b/app/views/shared/_flash_messages.html.haml
@@ -1,4 +1,4 @@
 %div{ class: "callout #{foundation_alert_class_for(type) }", 'data-closable' => '' }
   = format_flash_messages(flash_content)
   %button.close-button{ 'aria-label' => 'Dismiss alert', 'data-close' => "", type: 'button'}
-    %span{ 'aria-hidden' => 'true' } X
+    %span{ 'aria-hidden' => 'true' } x
