--- a/app/views/grants/new.html.haml
+++ b/app/views/grants/new.html.haml
@@ -1,6 +1,7 @@
 - content_for(:page_title, 'New Grant')
 %h1 New grant
 
-= render 'form'
+= form_with model: @grant, local:true do |f|
+  = render 'form', f: f, grant: @grant
 
 = link_to 'Back', grants_path
