--- a/app/views/questions/edit.html.haml
+++ b/app/views/questions/edit.html.haml
@@ -1,22 +1,20 @@
 - content_for(:page_title, "Editing: #{@question.name}")
 
-.grid-x
-  .cell
-    %h1
-      = "Editing #{@question.name}"
+%h1
+  = "Editing #{@question.name}"
+  %small
+    = @grant.name
 
-    .div
-      = link_to "Return to #{@grant.name}", grant_path(@grant)
+.div
+  = link_to "Return to #{@grant.name}", grant_path(@grant)
 
-    #remote_form_messages
+#remote_form_messages
 
-    .grid-x
-
-      = form_with model: [@grant, @question], id: "edit-question-#{@question.id}" do |f|
-        = render 'form', f: f, question: @question, constraint_questions: @constraint_questions
+= form_with model: [@grant, @question], id: "edit-question-#{@question.id}" do |f|
+  = render 'form', f: f, question: @question, constraint_questions: @constraint_questions
 
 
-  .cell
-    = link_to 'Back to Grant', grant_path(@grant)
-    |
-    = link_to 'Edit Grant', edit_grant_path(@grant)
+.cell
+= link_to 'Back to Grant', grant_path(@grant)
+|
+= link_to 'Edit Grant', edit_grant_path(@grant)
