--- a/app/views/grant_users/new.html.haml
+++ b/app/views/grant_users/new.html.haml
@@ -7,4 +7,4 @@
 .grid-x
   .cell
     = form_with model: [@grant, @grant_user], local: true do |f|
-      = render 'new_form', f: f, grant: @grant
+      = render 'new_form', f: f, grant: @grant, users: @users
