--- a/app/views/grant_users/new.html.haml
+++ b/app/views/grant_users/new.html.haml
@@ -1,8 +1,9 @@
-- content_for(:page_title, 'New Grant User')
+- content_for(:page_title, "Add User Permissions for #{@grant.name}")
 
 .grid-x
   .cell
-    %h1 New grant user
+    %h1
+      = yield(:page_title)
 
 .grid-x
   .cell
