Update grant, grant_user, questions front-end

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+@import "app";
 @import "foundation_and_overrides";
 @import "foundation-datepicker";
 @import "trix";
