--- a/app/views/grants/edit.html.haml
+++ b/app/views/grants/edit.html.haml
@@ -1,10 +1,12 @@
-- content_for(:page_title, "#{@grant.name}")
+- content_for(:page_title, "Edit - #{@grant.name}")
 
-%h1= "Editing #{@grant.name}"
+= render 'shared/grant_edit_tabbed_menu'
 
-= form_with model: @grant, local: true do |f|
-  = render 'form', f: f, grant: @grant, questions: @questions
+.tabs-panel.is-active
+  = form_with model: @grant, local: true, id: 'grant-edit' do |f|
+    = render 'form', f: f, grant: @grant
 
-  = link_to 'Show', @grant, id: "grant-#{@grant.id}"
-  |
-  = link_to 'Back', grants_path
+
+= link_to 'Show', @grant, id: "grant-#{@grant.id}"
+|
+= link_to 'Back', grants_path
