Pull request review cleanup

--- a/app/views/grants/grant_users/_edit_form.html.haml
+++ b/app/views/grants/grant_users/_edit_form.html.haml
@@ -13,4 +13,4 @@
 .grid-x
   .actions
     = f.submit 'Update', class: 'button'
-    = link_to 'Cancel', edit_grant_path(grant, anchor: 'permissions'), class: 'button secondary'
+    = link_to 'Cancel', grant_grant_users_path(grant), class: 'button secondary'
