Grant frontend changes (#25)
* Update grant, grant_user, questions front-end

--- a/app/views/grants/grant_users/_edit_form.html.haml
+++ b/app/views/grants/grant_users/_edit_form.html.haml
@@ -13,4 +13,4 @@
 .grid-x
   .actions
     = f.submit 'Update', class: 'button'
-    = link_to 'Cancel', grant_grant_users_path, class: 'button secondary'
+    = link_to 'Cancel', grant_grant_users_path(grant), class: 'button secondary'
