--- a/app/views/grants/new.html.haml
+++ b/app/views/grants/new.html.haml
@@ -1,7 +1,11 @@
-- content_for(:page_title, 'New Grant')
-%h1 New grant
+- content_for(:page_title, 'Create a New Grant')
+%h1 Create a New Grant
 
+#remote_form_messages
+
+=# form_with model: @grant, remote: true do |f|
 = form_with model: @grant, local: true do |f|
-  = render 'form', f: f, grant: @grant, questions: @questions
+  = render 'default_set_select', f: f
+  = render 'form', f: f, grant: @grant
 
 = link_to 'Back', grants_path
