--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -13,8 +13,8 @@
   %h3
     Dates
 .cell
-  = label_tag :initiation_date, 'Initiation Date'
-  = @grant.initiation_date
+  = label_tag :publish_date, 'Publish Date'
+  = @grant.publish_date
 .cell
   = label_tag :submission_open_date, 'Submission Open Date'
   = @grant.submission_open_date
