--- a/app/views/questions/edit.html.haml
+++ b/app/views/questions/edit.html.haml
@@ -1,7 +1,7 @@
-- content_for(:page_title, "Editing: #{@question.name}")
+- content_for(:page_title, "Editing: #{@question.text}")
 
 %h1
-  = "Editing #{@question.name}"
+  = "Editing #{@question.text}"
   %small
     = @grant.name
 
