--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -23,10 +23,10 @@
   Dates
 .grid-x
   .cell.small-12.medium-3
-    = f.label :initiation_date, 'Initiation Date', class: 'middle'
+    = f.label :publish_date, 'Initiation Date', class: 'middle'
   .cell.small-12.medium-9
-    = f.text_field :initiation_date, value: date_mmddyyyy(grant.initiation_date), required: true, class: 'small-12 medium-6', aria: { 'described-by': 'initiationDateHelp' }
-    %p.help-text#initiationDateHelp
+    = f.text_field :publish_date, value: date_mmddyyyy(grant.publish_date), required: true, class: 'small-12 medium-6', aria: { 'described-by': 'publishDateHelp' }
+    %p.help-text#publishDateHelp
       Once completed, your grant will publish on this date.
 
 %h4
@@ -90,7 +90,7 @@
 
 :javascript
   $(function() {
-  $( "#grant_initiation_date, #grant_submission_open_date, #grant_submission_close_date, #grant_panel_date, #grant_review_open_date, #grant_review_close_date" ).fdatepicker({
+  $( "#grant_publish_date, #grant_submission_open_date, #grant_submission_close_date, #grant_panel_date, #grant_review_open_date, #grant_review_close_date" ).fdatepicker({
     format: 'mm/dd/yyyy',
     closeIcon:' X ',
     closeButton: true
