--- a/app/views/grants/questions/index.html.haml
+++ b/app/views/grants/questions/index.html.haml
@@ -10,18 +10,16 @@
   %table
     %thead
       %tr
-        %th Name
+        %th Question Text
         %th Help text
-        %th Placeholder text
         %th Required
         %th
 
     %tbody
       - @questions.each do |question|
         %tr
-          %td= question.name
+          %td= question.text
           %td= question.help_text
-          %td= question.placeholder_text
           %td= (fa_icon('fa-check-square', text: "Yes")) if question.required?
           %td= link_to 'Edit', edit_grant_question_path(@grant, question)
           %td=# link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' }
