--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -13,26 +13,14 @@
   %h3
     Dates
 .cell
-  = label_tag :initiation_date, 'Initiation Date'
-  = @grant.initiation_date
+  = label_tag :publish_date, 'Publish Date'
+  = @grant.publish_date
 .cell
   = label_tag :submission_open_date, 'Submission Open Date'
   = @grant.submission_open_date
 .cell
   = label_tag :submission_close_date, 'Submission Close Date'
   = @grant.submission_close_date
-.cell
-  %h3
-    Budget
-  .grid-x
-    .cell
-      = label_tag :min_budget, 'Minimum Buget Amount'
-      $
-      = @grant.min_budget
-    .cell
-      = label_tag :max_budget, 'Maximum Buget Amount'
-      $
-      = @grant.max_budget
 .cell
   %h3
     Panel and Reviews
